Prevent page scrolling on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,9 +22,6 @@ html,
 body {
     background-color: var(--color-background);
     color: var(--color-primary);
-}
-
-body {
     overflow: hidden; /* Hide scrollbars */
 }
 
